--- a/apps/ui/package.json
+++ b/apps/ui/package.json
@@ -67,7 +67,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "dagre": "^0.8.5",
+    "apps/ui/src/components/views/graph-view/hooks/use-graph-filter.ts": "^0.8.5",
     "dotenv": "^17.2.3",
     "geist": "^1.5.1",
     "lucide-react": "^0.562.0",
